# n0OS

./: .gitignore  README.md  bootable.iso  bootloader.asm
os/: Cargo.toml
os/.cargo/: config.toml
os/kernel/: Cargo.toml
os/kernel/src/: framebuffer.rs  main.rs
os/src/: main.rs
